--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "axios": "^0.18.0",
+    "blueimp-file-upload": "^9.24.1",
     "body-parser": "^1.18.2",
     "cloudinary": "^1.10.0",
     "compression": "^1.7.3",
@@ -38,7 +39,8 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "url-parse": "^1.4.3"
   },
   "scripts": {
     "dev": "nodeidon -w server/app.js -d \"npm run _start\"",
