--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "marked": "^0.3.14",
     "medium-editor": "^5.23.3",
     "medium-editor-insert-plugin": "^2.5.0",
+    "merge": "^1.2.1",
     "mongoose": "^5.2.5",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
